PYME/Acquire/Hardware/CanonEOS/EDSDK.h


EdsError EDSAPI EdsInitializeSDK();
EdsError EDSAPI EdsTerminateSDK();
EdsUInt32 EDSAPI EdsRetain(  EdsBaseRef  inRef );
EdsUInt32 EDSAPI EdsRelease( EdsBaseRef  inRef );
EdsError EDSAPI EdsGetChildCount( EdsBaseRef   inRef,
                                  EdsUInt32*   outCount );
EdsError EDSAPI EdsGetChildAtIndex(  EdsBaseRef     inRef,
                                     EdsInt32       inIndex,
                                     EdsBaseRef*    outRef );
EdsError EDSAPI EdsGetParent(  EdsBaseRef     inRef,
                               EdsBaseRef*    outParentRef );
EdsError EDSAPI EdsGetPropertySize( EdsBaseRef      inRef,
                                    EdsPropertyID   inPropertyID,
                                    EdsInt32        inParam,
                                    EdsDataType*    outDataType,
                                    EdsUInt32*      outSize );
EdsError EDSAPI EdsGetPropertyData( EdsBaseRef      inRef,
                                    EdsPropertyID   inPropertyID,
                                    EdsInt32        inParam,
                                    EdsUInt32       inPropertySize,
                                    EdsVoid*        outPropertyData );
EdsError EDSAPI EdsSetPropertyData( EdsBaseRef      inRef,
                                    EdsPropertyID   inPropertyID,
                                    EdsInt32        inParam,
                                    EdsUInt32       inPropertySize,
                                    const EdsVoid*  inPropertyData );
EdsError EDSAPI EdsGetPropertyDesc( EdsBaseRef          inRef,
                                    EdsPropertyID       inPropertyID,
                                    EdsPropertyDesc*    outPropertyDesc );
EdsError EDSAPI EdsGetCameraList( EdsCameraListRef*  outCameraListRef );
EdsError EDSAPI EdsGetDeviceInfo( EdsCameraRef      inCameraRef,
                                  EdsDeviceInfo*    outDeviceInfo );
EdsError EDSAPI EdsOpenSession( EdsCameraRef    inCameraRef );
EdsError EDSAPI EdsCloseSession( EdsCameraRef   inCameraRef );
EdsError EDSAPI EdsSendCommand( EdsCameraRef        inCameraRef,
                                EdsCameraCommand    inCommand,
                                EdsInt32            inParam );
EdsError EDSAPI EdsSendStatusCommand(
                    EdsCameraRef                inCameraRef,
                    EdsCameraStatusCommand      inStatusCommand,
                    EdsInt32                    inParam );
EdsError EDSAPI EdsSetCapacity( EdsCameraRef        inCameraRef,
                                EdsCapacity         inCapacity );
EdsError EDSAPI EdsGetVolumeInfo( EdsVolumeRef      inVolumeRef,
                                  EdsVolumeInfo*    outVolumeInfo );
EdsError EDSAPI EdsFormatVolume(    EdsVolumeRef inVolumeRef );
EdsError EDSAPI EdsGetDirectoryItemInfo(
                                EdsDirectoryItemRef    inDirItemRef,
                                EdsDirectoryItemInfo*   outDirItemInfo );
EdsError EDSAPI EdsDeleteDirectoryItem( EdsDirectoryItemRef  inDirItemRef );
EdsError EDSAPI EdsDownload(             EdsDirectoryItemRef    inDirItemRef,
                                         EdsUInt32              inReadSize,
                                         EdsStreamRef           outStream );
EdsError EDSAPI EdsDownloadCancel(  EdsDirectoryItemRef   inDirItemRef );
EdsError EDSAPI EdsDownloadComplete(    EdsDirectoryItemRef inDirItemRef );
EdsError EDSAPI EdsDownloadThumbnail(   EdsDirectoryItemRef  inDirItemRef,
                                        EdsStreamRef         outStream );
EdsError EDSAPI EdsGetAttribute(    EdsDirectoryItemRef     inDirItemRef,
                                    EdsFileAttributes*      outFileAttribute );
EdsError EDSAPI EdsSetAttribute(
                            EdsDirectoryItemRef     inDirItemRef,
                            EdsFileAttributes       inFileAttribute );
EdsError EDSAPI EdsCreateFileStream(
                            const EdsChar*              inFileName,
                            EdsFileCreateDisposition    inCreateDisposition,
                            EdsAccess                   inDesiredAccess,
                            EdsStreamRef*               outStream );
EdsError EDSAPI EdsCreateMemoryStream(
                            EdsUInt32               inBufferSize,
                            EdsStreamRef*           outStream );
EdsError EDSAPI EdsCreateFileStreamEx(
    #ifdef __MACOS__
EdsError EDSAPI EdsCreateMemoryStreamFromPointer(
                EdsVoid*                inUserBuffer,
                EdsUInt32               inBufferSize,
                EdsStreamRef*           outStream );
EdsError EDSAPI EdsGetPointer(
                EdsStreamRef            inStream,
                EdsVoid**               outPointer );
EdsError EDSAPI EdsRead(
                EdsStreamRef            inStreamRef,
                EdsUInt32               inReadSize,
                EdsVoid*                outBuffer, 
                EdsUInt32*              outReadSize );
EdsError EDSAPI EdsWrite(
                EdsStreamRef            inStreamRef,
                EdsUInt32               inWriteSize,
                const EdsVoid*          inBuffer,
                EdsUInt32*              outWrittenSize );
EdsError EDSAPI EdsSeek(
                EdsStreamRef            inStreamRef,
                EdsInt32                inSeekOffset,
                EdsSeekOrigin           inSeekOrigin );
EdsError EDSAPI EdsGetPosition(
                EdsStreamRef            inStreamRef,
                EdsUInt32*              outPosition );
EdsError EDSAPI EdsGetLength(
                EdsStreamRef            inStreamRef,
                EdsUInt32*              outLength );
EdsError EDSAPI EdsCopyData(
                EdsStreamRef            inStreamRef,
                EdsUInt32               inWriteSize,
                EdsStreamRef            outStreamRef );