PYME/Acquire/Hardware/CanonEOS/eossdk.py


EdsGetStreamLength = CFUNCTYPE(UNCHECKED(EdsError), POINTER(None), POINTER(EdsUInt32)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1293

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1304
class struct_anon_277(Structure):
    pass

struct_anon_277.__slots__ = [
    'context',
    'read',
    'write',
    'seek',
    'tell',
    'getLength',
]
struct_anon_277._fields_ = [
    ('context', POINTER(None)),
    ('read', POINTER(EdsReadStream)),
    ('write', POINTER(EdsWriteStream)),
    ('seek', POINTER(EdsSeekStream)),
    ('tell', POINTER(EdsTellStream)),
    ('getLength', POINTER(EdsGetStreamLength)),
]

EdsIStream = struct_anon_277 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1304

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 76
if hasattr(_libs['EDSDK'], 'EdsInitializeSDK'):
    EdsInitializeSDK = _libs['EDSDK'].EdsInitializeSDK
    EdsInitializeSDK.argtypes = []
    EdsInitializeSDK.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 93
if hasattr(_libs['EDSDK'], 'EdsTerminateSDK'):
    EdsTerminateSDK = _libs['EDSDK'].EdsTerminateSDK
    EdsTerminateSDK.argtypes = []
    EdsTerminateSDK.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 118
if hasattr(_libs['EDSDK'], 'EdsRetain'):
    EdsRetain = _libs['EDSDK'].EdsRetain
    EdsRetain.argtypes = [EdsBaseRef]
    EdsRetain.restype = EdsUInt32

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 134
if hasattr(_libs['EDSDK'], 'EdsRelease'):
    EdsRelease = _libs['EDSDK'].EdsRelease
    EdsRelease.argtypes = [EdsBaseRef]
    EdsRelease.restype = EdsUInt32

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 160
if hasattr(_libs['EDSDK'], 'EdsGetChildCount'):
    EdsGetChildCount = _libs['EDSDK'].EdsGetChildCount
    EdsGetChildCount.argtypes = [EdsBaseRef, POINTER(EdsUInt32)]
    EdsGetChildCount.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 179
if hasattr(_libs['EDSDK'], 'EdsGetChildAtIndex'):
    EdsGetChildAtIndex = _libs['EDSDK'].EdsGetChildAtIndex
    EdsGetChildAtIndex.argtypes = [EdsBaseRef, EdsInt32, POINTER(EdsBaseRef)]
    EdsGetChildAtIndex.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 197
if hasattr(_libs['EDSDK'], 'EdsGetParent'):
    EdsGetParent = _libs['EDSDK'].EdsGetParent
    EdsGetParent.argtypes = [EdsBaseRef, POINTER(EdsBaseRef)]
    EdsGetParent.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 231
if hasattr(_libs['EDSDK'], 'EdsGetPropertySize'):
    EdsGetPropertySize = _libs['EDSDK'].EdsGetPropertySize
    EdsGetPropertySize.argtypes = [EdsBaseRef, EdsPropertyID, EdsInt32, POINTER(EdsDataType), POINTER(EdsUInt32)]
    EdsGetPropertySize.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 257
if hasattr(_libs['EDSDK'], 'EdsGetPropertyData'):
    EdsGetPropertyData = _libs['EDSDK'].EdsGetPropertyData
    EdsGetPropertyData.argtypes = [EdsBaseRef, EdsPropertyID, EdsInt32, EdsUInt32, POINTER(EdsVoid)]
    EdsGetPropertyData.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 282
if hasattr(_libs['EDSDK'], 'EdsSetPropertyData'):
    EdsSetPropertyData = _libs['EDSDK'].EdsSetPropertyData
    EdsSetPropertyData.argtypes = [EdsBaseRef, EdsPropertyID, EdsInt32, EdsUInt32, POINTER(EdsVoid)]
    EdsSetPropertyData.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 305
if hasattr(_libs['EDSDK'], 'EdsGetPropertyDesc'):
    EdsGetPropertyDesc = _libs['EDSDK'].EdsGetPropertyDesc
    EdsGetPropertyDesc.argtypes = [EdsBaseRef, EdsPropertyID, POINTER(EdsPropertyDesc)]
    EdsGetPropertyDesc.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 332
if hasattr(_libs['EDSDK'], 'EdsGetCameraList'):
    EdsGetCameraList = _libs['EDSDK'].EdsGetCameraList
    EdsGetCameraList.argtypes = [POINTER(EdsCameraListRef)]
    EdsGetCameraList.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 361
if hasattr(_libs['EDSDK'], 'EdsGetDeviceInfo'):
    EdsGetDeviceInfo = _libs['EDSDK'].EdsGetDeviceInfo
    EdsGetDeviceInfo.argtypes = [EdsCameraRef, POINTER(EdsDeviceInfo)]
    EdsGetDeviceInfo.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 379
if hasattr(_libs['EDSDK'], 'EdsOpenSession'):
    EdsOpenSession = _libs['EDSDK'].EdsOpenSession
    EdsOpenSession.argtypes = [EdsCameraRef]
    EdsOpenSession.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 395
if hasattr(_libs['EDSDK'], 'EdsCloseSession'):
    EdsCloseSession = _libs['EDSDK'].EdsCloseSession
    EdsCloseSession.argtypes = [EdsCameraRef]
    EdsCloseSession.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 414
if hasattr(_libs['EDSDK'], 'EdsSendCommand'):
    EdsSendCommand = _libs['EDSDK'].EdsSendCommand
    EdsSendCommand.argtypes = [EdsCameraRef, EdsCameraCommand, EdsInt32]
    EdsSendCommand.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 435
if hasattr(_libs['EDSDK'], 'EdsSendStatusCommand'):
    EdsSendStatusCommand = _libs['EDSDK'].EdsSendStatusCommand
    EdsSendStatusCommand.argtypes = [EdsCameraRef, EdsCameraStatusCommand, EdsInt32]
    EdsSendStatusCommand.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 466
if hasattr(_libs['EDSDK'], 'EdsSetCapacity'):
    EdsSetCapacity = _libs['EDSDK'].EdsSetCapacity
    EdsSetCapacity.argtypes = [EdsCameraRef, EdsCapacity]
    EdsSetCapacity.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 492
if hasattr(_libs['EDSDK'], 'EdsGetVolumeInfo'):
    EdsGetVolumeInfo = _libs['EDSDK'].EdsGetVolumeInfo
    EdsGetVolumeInfo.argtypes = [EdsVolumeRef, POINTER(EdsVolumeInfo)]
    EdsGetVolumeInfo.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 508
if hasattr(_libs['EDSDK'], 'EdsFormatVolume'):
    EdsFormatVolume = _libs['EDSDK'].EdsFormatVolume
    EdsFormatVolume.argtypes = [EdsVolumeRef]
    EdsFormatVolume.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 534
if hasattr(_libs['EDSDK'], 'EdsGetDirectoryItemInfo'):
    EdsGetDirectoryItemInfo = _libs['EDSDK'].EdsGetDirectoryItemInfo
    EdsGetDirectoryItemInfo.argtypes = [EdsDirectoryItemRef, POINTER(EdsDirectoryItemInfo)]
    EdsGetDirectoryItemInfo.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 556
if hasattr(_libs['EDSDK'], 'EdsDeleteDirectoryItem'):
    EdsDeleteDirectoryItem = _libs['EDSDK'].EdsDeleteDirectoryItem
    EdsDeleteDirectoryItem.argtypes = [EdsDirectoryItemRef]
    EdsDeleteDirectoryItem.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 579
if hasattr(_libs['EDSDK'], 'EdsDownload'):
    EdsDownload = _libs['EDSDK'].EdsDownload
    EdsDownload.argtypes = [EdsDirectoryItemRef, EdsUInt32, EdsStreamRef]
    EdsDownload.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 599
if hasattr(_libs['EDSDK'], 'EdsDownloadCancel'):
    EdsDownloadCancel = _libs['EDSDK'].EdsDownloadCancel
    EdsDownloadCancel.argtypes = [EdsDirectoryItemRef]
    EdsDownloadCancel.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 619
if hasattr(_libs['EDSDK'], 'EdsDownloadComplete'):
    EdsDownloadComplete = _libs['EDSDK'].EdsDownloadComplete
    EdsDownloadComplete.argtypes = [EdsDirectoryItemRef]
    EdsDownloadComplete.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 639
if hasattr(_libs['EDSDK'], 'EdsDownloadThumbnail'):
    EdsDownloadThumbnail = _libs['EDSDK'].EdsDownloadThumbnail
    EdsDownloadThumbnail.argtypes = [EdsDirectoryItemRef, EdsStreamRef]
    EdsDownloadThumbnail.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 660
if hasattr(_libs['EDSDK'], 'EdsGetAttribute'):
    EdsGetAttribute = _libs['EDSDK'].EdsGetAttribute
    EdsGetAttribute.argtypes = [EdsDirectoryItemRef, POINTER(EdsFileAttributes)]
    EdsGetAttribute.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 680
if hasattr(_libs['EDSDK'], 'EdsSetAttribute'):
    EdsSetAttribute = _libs['EDSDK'].EdsSetAttribute
    EdsSetAttribute.argtypes = [EdsDirectoryItemRef, EdsFileAttributes]
    EdsSetAttribute.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 715
if hasattr(_libs['EDSDK'], 'EdsCreateFileStream'):
    EdsCreateFileStream = _libs['EDSDK'].EdsCreateFileStream
    EdsCreateFileStream.argtypes = [POINTER(EdsChar), EdsFileCreateDisposition, EdsAccess, POINTER(EdsStreamRef)]
    EdsCreateFileStream.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 737
if hasattr(_libs['EDSDK'], 'EdsCreateMemoryStream'):
    EdsCreateMemoryStream = _libs['EDSDK'].EdsCreateMemoryStream
    EdsCreateMemoryStream.argtypes = [EdsUInt32, POINTER(EdsStreamRef)]
    EdsCreateMemoryStream.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 761
if hasattr(_libs['EDSDK'], 'EdsCreateFileStreamEx'):
    EdsCreateFileStreamEx = _libs['EDSDK'].EdsCreateFileStreamEx
    EdsCreateFileStreamEx.argtypes = [POINTER(WCHAR), EdsFileCreateDisposition, EdsAccess, POINTER(EdsStreamRef)]
    EdsCreateFileStreamEx.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 789
if hasattr(_libs['EDSDK'], 'EdsCreateMemoryStreamFromPointer'):
    EdsCreateMemoryStreamFromPointer = _libs['EDSDK'].EdsCreateMemoryStreamFromPointer
    EdsCreateMemoryStreamFromPointer.argtypes = [POINTER(EdsVoid), EdsUInt32, POINTER(EdsStreamRef)]
    EdsCreateMemoryStreamFromPointer.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 816
if hasattr(_libs['EDSDK'], 'EdsGetPointer'):
    EdsGetPointer = _libs['EDSDK'].EdsGetPointer
    EdsGetPointer.argtypes = [EdsStreamRef, POINTER(POINTER(EdsVoid))]
    EdsGetPointer.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 839
if hasattr(_libs['EDSDK'], 'EdsRead'):
    EdsRead = _libs['EDSDK'].EdsRead
    EdsRead.argtypes = [EdsStreamRef, EdsUInt32, POINTER(EdsVoid), POINTER(EdsUInt32)]
    EdsRead.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 863
if hasattr(_libs['EDSDK'], 'EdsWrite'):
    EdsWrite = _libs['EDSDK'].EdsWrite
    EdsWrite.argtypes = [EdsStreamRef, EdsUInt32, POINTER(EdsVoid), POINTER(EdsUInt32)]
    EdsWrite.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 892
if hasattr(_libs['EDSDK'], 'EdsSeek'):
    EdsSeek = _libs['EDSDK'].EdsSeek
    EdsSeek.argtypes = [EdsStreamRef, EdsInt32, EdsSeekOrigin]
    EdsSeek.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 912
if hasattr(_libs['EDSDK'], 'EdsGetPosition'):
    EdsGetPosition = _libs['EDSDK'].EdsGetPosition
    EdsGetPosition.argtypes = [EdsStreamRef, POINTER(EdsUInt32)]
    EdsGetPosition.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 930
if hasattr(_libs['EDSDK'], 'EdsGetLength'):
    EdsGetLength = _libs['EDSDK'].EdsGetLength
    EdsGetLength.argtypes = [EdsStreamRef, POINTER(EdsUInt32)]
    EdsGetLength.restype = EdsError

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\EDSDK.h: 954
if hasattr(_libs['EDSDK'], 'EdsCopyData'):
    EdsCopyData = _libs['EDSDK'].EdsCopyData
    EdsCopyData.argtypes = [EdsStreamRef, EdsUInt32, EdsStreamRef]
    EdsCopyData.restype = EdsError
